Fixed countdown on mobile.

--- a/src/components/countdown.module.scss
+++ b/src/components/countdown.module.scss
@@ -11,12 +11,13 @@
 
 .countdown {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
 .timeblock {
   display: inline-block;
-  margin: 0 1rem;
+  margin: 0 1rem 2rem;
   min-width: 125px;
   padding: 1rem 2rem 1.5rem;
   background-color: rgba(255, 255, 255, 0.3);
